[gd_scene load_steps=2 format=3 uid="uid://bquwv054gmmu5"]

[ext_resource type="Script" path="res://addons/card_engine/editor/data_table_field.gd" id="1_hajct"]

[node name="data_table_field" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_hajct")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="focus_exited" from="MarginContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="gui_input" from="MarginContainer/LineEdit" to="." method="_on_line_edit_gui_input"]
